Removed  fabric crashlytics.

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/passwordLayout"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorSecondary"
         android:text="@string/action_signup" />
 
     <TextView
