--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent"
     tools:context="com.raghu.testfire.activity.SplashActivity">
 
@@ -10,7 +11,7 @@
         android:layout_height="wrap_content"
         android:textSize="48sp"
         android:textStyle="bold"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorSecondaryDark"
         android:layout_centerInParent="true"
         android:text="TestFire" />
 
